<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:layout_marginTop="8dp"
    android:background="@drawable/bg_corner_back"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/btnEdit"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:src="@drawable/ic_edit"
        app:tint="@color/purple"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageView
        android:id="@+id/ivTeacherColor"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/ic_circle"
        app:tint="@color/purple"
        app:layout_constraintTop_toBottomOf="@id/btnEdit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/tvStudentName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textSize="15sp"
        android:textColor="@color/purple"
        android:fontFamily="@font/boldinter"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <TextView
        android:id="@+id/tvBorder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/border"
        android:textSize="15sp"
        android:textColor="@color/purple"
        android:fontFamily="@font/boldinter"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvStudentName"/>

    <TextView
        android:id="@+id/tvStudentLevel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/level"
        android:textSize="15sp"
        android:textColor="@color/purple"
        android:fontFamily="@font/boldinter"
        android:layout_marginLeft="8dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toEndOf="@id/tvBorder"/>

    <TextView
        android:id="@+id/tvStudentWeek"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/week"
        android:textSize="15sp"
        android:textColor="@color/purple"
        android:fontFamily="@font/regularinter"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStudentName"/>

    <TextView
        android:id="@+id/tvStudentMaterial"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/material"
        android:textSize="15sp"
        android:textColor="@color/purple"
        android:fontFamily="@font/regularinter"
        android:layout_marginTop="2dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvStudentWeek"/>

</androidx.constraintlayout.widget.ConstraintLayout>